# libcsem

./: Makefile.in  README  README.rst  configure  configure.in
csem/: Doxyfile  csem_builder.h  csem_common.h  csem_config.h  csem_config.h.in  csem_list.h  csem_micro_stream.h  csem_micro_tree.h  csem_rdfa_lite.h  csem_rdfa_stream.h  csem_rdfa_tree.h  csem_stack.h  csem_stream.h  csem_tree.h  csem_url.h
doc/: NEWS
examples/microdata/search/: 1.html  Makefile.in  sample_micro_search.c
examples/microdata/stream/: Makefile.in  sample_micro_stream.c  schema-org-event-ex2.html
examples/microdata/tree/: Makefile.in  sample_micro_tree.c
examples/rdfa-lite/search/: Makefile.in  sample_rdfa_search.c
examples/rdfa-lite/stream/: Makefile.in  rdfa-lite-event.html  sample_rdfa_stream.c
examples/rdfa-lite/tree/: Makefile.in  sample_rdfa_tree.c
examples/test/: alltest.c  test_list.c  test_list.h  test_micro_stream.c  test_micro_stream.h  test_micro_tree.c  test_micro_tree.h  test_ns_manager.c  test_ns_manager.h  test_rdfa_stream.c  test_rdfa_stream.h  test_rdfa_tree.c  test_rdfa_tree.h  test_sample.c  test_stack.c  test_stack.h  test_url.c  test_url.h  test_utils.c  test_utils.h  test_utils_stream.c  test_utils_stream.h
examples/test/data/: 5-4-Values.html  basic.html  micro-5-4-Values.html  micro-android-app.html  micro-basic.html  micro-bestbuy.html  micro-bestbuy2.html  (+18 more)
src/: Makefile.in  csem_builder.c  csem_list.c  csem_micro_stream.c  csem_micro_stream_internal.h  csem_micro_tree.c  csem_ns_manager.c  csem_ns_manager.h  csem_rdfa_lite.c  csem_rdfa_stream.c  csem_rdfa_tree.c  csem_stack.c  csem_stack.h  csem_stream.c  csem_tree.c  csem_types.h  csem_url.c  csem_utils.c  csem_utils.h
(+9 files in other folders)
