# $Id$
AC_PREREQ(2.57)
AC_INIT(microdata/RDFa-Lite Library, 0.2, uchida@w3.org)
AC_CONFIG_SRCDIR([src])
AC_CONFIG_HEADER([csem/csem_config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB
AC_PATH_PROG(AR, ar, :, $PATH)
AC_PROG_INSTALL

# Checks for header files.
AC_HEADER_STDC

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T

# Checks for library functions.
AC_FUNC_MALLOC
AC_FUNC_REALLOC

CFLAGS="-Wall -pedantic -Wformat=2 -Wstrict-aliasing=2"
CPPFLAGS="-I./"
MAKEFILES="Makefile src/Makefile"
MAKEFILES="$MAKEFILES  examples/microdata/stream/Makefile"
MAKEFILES="$MAKEFILES  examples/microdata/tree/Makefile"
MAKEFILES="$MAKEFILES  examples/microdata/search/Makefile"
MAKEFILES="$MAKEFILES  examples/rdfa-lite/stream/Makefile"
MAKEFILES="$MAKEFILES  examples/rdfa-lite/tree/Makefile"

AC_ARG_ENABLE([debug],
    AC_HELP_STRING(
        [--enable-debug],
        [enable debug option (default is no)]),
    [
        if test "$enable_debug" = "yes"; then
            CFLAGS="-O0 $CFLAGS -g -ftrapv -DDEBUG"
        fi
    ],
    [
        CFLAGS="-O3 $CFLAGS"
        enable_debug="no"
    ])
AC_ARG_ENABLE([profile],
    AC_HELP_STRING(
        [--enable-profile],
        [enable profile option (default no)]),
    [
        if test "$enable_profile" = "yes"; then
            CFLAGS="$CFLAGS -pg"
        fi
    ],
    [
        enable_profile="no"
    ])

AC_OUTPUT($MAKEFILES)
AC_SUBST(MAKEFILES)
printf "\n"
printf "Configuration Result\n"
printf "\tDebug     ... [%s]\n" $enable_debug
printf "\tProfile   ... [%s]\n" $enable_profile
printf "\n"
